feat: enhance patient search functionality with risk level filtering and improve error handling in AI services